typetools/checker-framework 3.49.5 release (#1311)
Co-authored-by: Suzanne Millstein <smillst@cs.washington.edu>
Co-authored-by: Michael Ernst <mernst@cs.washington.edu>
Co-authored-by: Martin Kellogg <martin.kellogg@njit.edu>
Co-authored-by: Vlastimil <dort@d3s.mff.cuni.cz>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Sascha Kehrli <84683849+skehrli@users.noreply.github.com>
Co-authored-by: Sascha Kehrli <skehrli@ethz.ch>
Co-authored-by: Liam Miller-Cushon <cushon@google.com>